[project]name = "ai_agent"   # name appear in pip install store version = "0.1.0"description = "Project that applied AI agents to solve realwork problems"authors = [    { name = "Neo" }]dependencies = [    "langgraph",    "langchain",    "openai"]requires-python = ">=3.9"[build-system]requires = ["setuptools>=61.0"]build-backend = "setuptools.build_meta"[tool.setuptools.packages.find]where = ["src"]